2008-09-04  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Rework UTF-8 output to keep sys.stdout untouched (or it'd
	  break 's3cmd get' to stdout for binary files).

2008-09-03  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, S3/Config.py: Removed --use-old-connect-method
	  again. Autodetect the need for old connect method instead.

2008-09-03  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py: Make --verbose mode more useful and default 
	  mode less verbose.

2008-09-03  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Config.py: [rb] Allow removal of non-empty buckets
	  with --force.
	  [mb, rb] Allow multiple arguments, i.e. create or remove
	  multiple buckets at once.
	  [del] Perform recursive removal with --recursive (or -r).

2008-09-01  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Refuse 'sync' together with '--encrypt'.
	* S3/S3.py: removed object_{get,put,delete}_uri() functions
	  and made object_{get,put,delete}() accept URI instead of 
	  bucket/object parameters.

2008-09-01  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre1

2008-09-01  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, S3/Config.py: Allow access to upper-case
	  named buckets again with --use-old-connect-method 
	  (uses http://s3.amazonaws.com/bucket/object instead of
	  http://bucket.s3.amazonaws.com/object)

2008-08-19  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Always output UTF-8, even on output redirects.

2008-08-01  Michal Ludvig  <michal@logix.cz>

	* TODO: Add some items

2008-07-29  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.8.3
	  ------------------------

2008-07-29  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.8.3
	* NEWS: Added 0.9.8.3

2008-07-29  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py (hash_file_md5): Hash files in 32kB chunks
	  instead of reading it all up to a memory first to avoid
	  OOM on large files.

2008-07-07  Michal Ludvig  <michal@logix.cz>
